tests/checker/fail/duplicate_function.can
Doubled = Int

Int => Doubled {
    Int.mul(2)
}

Int => Doubled {
    Int.mul(3)
}

Unit => Program {
    2 -> Doubled -> Print
}
